<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur10e_hande_mtc</name>
  <version>1.0.0</version>
  <description>MoveIt Task Constructor demo for UR10e with Hande gripper</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Core dependencies -->
  <depend>rclcpp</depend>
  <depend>moveit_core</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_visual_tools</depend>
  
  <!-- UR10e + Hande dependencies -->
  <depend>ur10e_hande_description</depend>
  <depend>ur10e_hande_moveit_config</depend>
  <depend>ur_robot_driver</depend>
  
  <!-- Launch dependencies -->
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>moveit_configs_utils</depend>
  
  <!-- Message dependencies -->
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  
  <!-- RViz -->
  <depend>rviz2</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>